ft: update view function that predicts image

--- a/classifierApp/templates/index.html
+++ b/classifierApp/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content%}
 
-    <h2>Uplaod Image for Classification</h2>
+    <h2>Upload Image for Classification</h2>
 
     
     <br>
