--- a/classifierApp/templates/headerPage.html
+++ b/classifierApp/templates/headerPage.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 
-     <title>MPG prediction usecase</title>
+     <title>Doc Classified</title>
 
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -36,7 +36,7 @@
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a href="index.html" class="navbar-brand"><i class="fa fa-h-square"></i>MPG Problem</a>
+                    <a href="index.html" class="navbar-brand"><i class="fa fa-h-square"></i>DOC CLASSIFIED</a>
                </div>
 
                <!-- MENU LINKS -->
