ft: add requirements.txt

--- a/classifierApp/templates/base.html
+++ b/classifierApp/templates/base.html
@@ -12,14 +12,14 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
   <meta name="author" content="Tooplate">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   {% block styles %}
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <!-- <link rel="stylesheet" href="{% static 'css/style.css' %}">
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
   <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
   <link rel="stylesheet" href="{% static 'css/animate.css' %}">
   <link rel="stylesheet" href="{% static 'css/owl.carousel.css' %}">
-  <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
+  <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}"> -->
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   {% bootstrap_css %}
   {% endblock %}
@@ -112,7 +112,7 @@
     <ul class="foote_bottom_ul_amrc">
     <li><a href="/">Home</a></li>
     <li><a href="/">About</a></li>
-    <li><a href="ViewDatabase">Gallery</a></li>
+    <li><a href="viewDataBase">Gallery</a></li>
     <li><a href="/">Contact</a></li>
     </ul>
     <!--foote_bottom_ul_amrc ends here-->
