ft: working app without UI

--- a/classifierApp/templates/base.html
+++ b/classifierApp/templates/base.html
@@ -1,6 +1,5 @@
 {% load bootstrap4 %}
 {% load static %}
-{% load fontawesome_5 %}
 
 <!DOCTYPE html>
 <html>
@@ -14,8 +13,8 @@
   <meta name="author" content="Tooplate">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   {% block styles %}
-  <!-- <link rel="stylesheet" href="{% static 'css/style.css' %}">
-  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <!-- <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
   <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
   <link rel="stylesheet" href="{% static 'css/animate.css' %}">
   <link rel="stylesheet" href="{% static 'css/owl.carousel.css' %}">
@@ -23,7 +22,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   {% bootstrap_css %}
   {% endblock %}
-  {% fontawesome_5_static %}
+
 </head>
 <style>
   .body{
