st: adds styling to templates

--- a/classifierApp/templates/home.html
+++ b/classifierApp/templates/home.html
@@ -6,24 +6,26 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-6">
+      
       <img src="{% static 'images/headerimage.png' %}" alt="headerimg">
     </div>
-    <div class="col-sm-6">
-      <p>WANT TO SEE YOUR 
-        CARD GET CLASSIFIED 
-        AS EITHER AN 
+    <div class="col-sm-6" style="color:#C0A48E; font-size: 40px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bolder;">
+      <p>WANT TO SEE YOUR <br>
+        CARD GET CLASSIFIED <br>
+        AS EITHER AN <br>
         ID CARD OR PASSPORT??</p>
-        <p>Uses a CNN image classification model</p>
-        <button class="btn btn-lg" > UPLOAD IMAGE</button>
+        <p style="color:#FFE4CA; font-size: 20px;">Uses a CNN image classification model</p>
+        <a href="upload/"><button class="btn btn-lg" style="background-color:#95847C; color:white; border-radius: 50px;width: 250px; font-size: 20px; font-weight: bold;" > UPLOAD IMAGE</button></a>
+        <a href="#"><button class="btn btn-lg" style="background-color:#95847C; color:white; border-radius: 50px; width: 250px; font-size: 20px; font-weight: bold; opacity:50%" > DOWNLOAD API</button></a>
     </div>
   </div>
 
-  <div class="row">
+  <div class="row" style="margin-top: 100px; color: #29011C; font-size:30px;font-weight:bolder;">
     <div class="col-sm-4">
       <p><img src="{% static 'images/passport.png' %}"> passport??</p>
     </div>
     <div class="col-sm-4">
-      <p><img src="{% static 'images/arrow.png' %}"></p>
+      <p style="margin-left: 100px;"><img src="{% static 'images/arrow.png' %}"></p>
     </div>
     <div class="col-sm-4">
       <p><img src="{% static 'images/driver.png' %}"> driving license??</p>
