--- a/classifierApp/templates/base.html
+++ b/classifierApp/templates/base.html
@@ -14,6 +14,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   {% block styles %}
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <!-- <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
   <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
   <link rel="stylesheet" href="{% static 'css/animate.css' %}">
@@ -24,8 +26,10 @@
   {% endblock %}
 
 </head>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 <style>
-  .body{
+  body{
     background-color: #6A3645;
   }
 </style>
@@ -55,7 +59,7 @@
     {% endblock %}
 
   </div>
-  <footer class="footer">
+  <footer class="footer" style="opacity:80%;">
     <div class="container bottom_border">
     <div class="row">
     <div class=" col-sm-4 col-md col-sm-4  col-12 col">
@@ -63,7 +67,7 @@
     <!--headin5_amrc-->
     <p class="mb10">Doc Classified is an application managed by MachukaCorp that predcts ID Card type for easy submission</p>
     <p><i class="fa fa-location-arrow"></i> 44 Nairobi 9 westlands</p>
-    <p><i class="fa fa-phone"></i>  +44-9999878398  </p>
+    <p><i class="fa fa-phone"></i>  +254-712345647  </p>
     <p><i class="fa fa fa-envelope"></i> info@machukacorp.com  </p>
     
     </div>
@@ -77,8 +81,8 @@
     <li><a href="https://github.com/MachukaJoy">Doc Classified</a></li>
     <li><a href="https://github.com/MachukaJoy">My Account Gallery</a></li>
     <li><a href="https://github.com/MachukaJoy">Machuka Corp</a></li>
-    <li><a href="https://github.com/MachukaJoy">Hellen Voice</a></li>
-    <li><a href="https://github.com/MachukaJoy">Image Cropping</a></li>
+    <li><a href="https://github.com/MachukaJoy">Hellen Voice Assistant</a></li>
+    <li><a href="https://github.com/MachukaJoy">Image Cropping API</a></li>
     </ul>
     <!--footer_ul_amrc ends here-->
     </div>
@@ -89,14 +93,14 @@
     <!--headin5_amrc ends here-->
     
     <ul class="footer_ul2_amrc">
-    <li><a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a><p>Check out our Hellen Voice assistant...<a href="#">https://www.MachukaCorp.com/</a></p></li>
-    <li><a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a><p>Machuka Corp ranks top in upcoming startups 2023...<a href="#">https://www.MachukaCorp.com/</a></p></li>
-    <li><a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a><p>Machuka Corp scoops a million dollar investment...<a href="#">https://www.MachukaCorp.com/</a></p></li>
+    <li><a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a><p>Check out our Hellen Voice assistant...<a href="#" id="footer_ul2_amrc_a">https://www.MachukaCorp.com/</a></p></li>
+    <li><a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a><p>Machuka Corp ranks top in upcoming startups 2023...<a href="#" id="footer_ul2_amrc_a">https://www.MachukaCorp.com/</a></p></li>
+    <li><a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a><p>Machuka Corp scoops a million dollar investment...<a href="#" id="footer_ul2_amrc_a">https://www.MachukaCorp.com/</a></p></li>
     </ul>
     <!--footer_ul2_amrc ends here-->
     </div>
   
-    <div class=" col-sm-4 col-md  col-6 col">
+    <div class=" col-sm-4 col-md  col-6 col d-flex justify-content-center" style="flex-direction: column; align-items: center;">
       <ul class="footer_ul_amrc">
         <li><img src="{% static 'images/companylogo.png' %}"></li>   
         </ul>
@@ -108,14 +112,14 @@
     
     
     <div class="container">
-    <ul class="foote_bottom_ul_amrc">
+    <ul class="foote_bottom_ul_amrc" id="foote_bottom_ul_amrc_ul">
     <li><a href="/">Home</a></li>
     <li><a href="/">About</a></li>
     <li><a href="viewDataBase">Gallery</a></li>
     <li><a href="/">Contact</a></li>
     </ul>
     <!--foote_bottom_ul_amrc ends here-->
-    <p class="text-center">Copyright @2017 | Designed With by <a href="#">Your Company Name</a></p>
+    <p class="text-center">Copyright @2022 | Designed With by <a id = "copyright" href="#">Machuka Corp</a></p>
     
     <ul class="social_footer_ul">
     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
