--- a/classifierApp/templates/navbar.html
+++ b/classifierApp/templates/navbar.html
@@ -25,7 +25,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <form class="form-inline" >
         <a class="mr-sm-2" aria-current="page" style="color:#A66834; font-size: 30px; font-weight: bold;" href="/">Home</a>
-       <a href="viewDataBase" ><button class="btn" style="background-color:#b81053;opacity: 40%;color:#E3CE10; width: 300px; border-radius: 50px; font-size: 20px; font-weight: bold;">My Account<img src="{% static 'images/myacc.png' %}" alt="btnimage"></button></a>
+       <a href="viewDataBase" ><button class="btn" style="background-color:#b81053;opacity: 40%;color:#E3CE10; width: 250px; border-radius: 50px; font-size: 20px; font-weight: bold;">My Account<img src="{% static 'images/myacc.png' %}" alt="btnimage" style = "height:35px; width:35px;"></button></a>
       </form>
     </div>
     <!-- Collapsible wrapper -->
