--- a/classifierApp/templates/base.html
+++ b/classifierApp/templates/base.html
@@ -115,7 +115,7 @@
     <ul class="foote_bottom_ul_amrc" id="foote_bottom_ul_amrc_ul">
     <li><a href="/">Home</a></li>
     <li><a href="/">About</a></li>
-    <li><a href="viewDataBase">Gallery</a></li>
+    <li><a href="/">Gallery</a></li>
     <li><a href="/">Contact</a></li>
     </ul>
     <!--foote_bottom_ul_amrc ends here-->
